--- a/code_representation/task3.ipynb
+++ b/code_representation/task3.ipynb
@@ -46,7 +46,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!!wget https://s3.amazonaws.com/code2vec/model/java14m_model.tar.gz"
+        "!wget https://s3.amazonaws.com/code2vec/model/java14m_model.tar.gz"
       ],
       "metadata": {
         "id": "Rnzp1tSNS6wb"
@@ -419,7 +419,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Вектора достаточно близки"
+        "Вывод: Вектора достаточно близки"
       ],
       "metadata": {
         "id": "0HqhrMBIZSDV"
